[tool.poetry]
name = "docker-redis"
version = "0.1.0"
description = ""
authors = ["hwlcrd <howardlecanard@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
redis = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
